# SA-LED-matrix-UNICARagil

./: 50-cloud-init.yaml  README.md
PAP/: SW-Entwicklungsplan UNICARagil V2.pap  SW-Entwicklungsplan UNICARagil.pap
PowerPoint Slides/: README.md
PowerPoint Slides/Regeltermin 10 - Back Service Testing/: Regeltermin 10 mit Johannes.pptx  ~$Regeltermin 10 mit Johannes.pptx
PowerPoint Slides/Regeltermin 2 - Einarbeitung ASOA/: Regeltermin 2.pptx
PowerPoint Slides/Regeltermin 4 - RPi Dienst LED/: Regeltermin 3 mit Johannes.pptx
RGB_eHMI_Dummy_Services/: .gitignore  CMakeLists.txt  README.md  orchestrator.txt
RGB_eHMI_Dummy_Services/GUI/: .classpath  .project  README.md
RGB_eHMI_Dummy_Services/GUI/src/de/giaphongtran/unicaragil/ehmi/: Command.java  ConnectionStatus.java  Controller.java  DataPublisher.java  DataSubscriber.java  GUI.java  Main.java  Server.java  SocketClient.java
RGB_eHMI_Dummy_Services/include/: Back_Service.hpp  Dummy_Service.hpp  RGB_Matrix_Controller_Dummy.hpp  RGB_Status.hpp
RGB_eHMI_Dummy_Services/include/idl/: AlPedCr_sts.hpp  LPRL_sts.hpp  RPR_sts.hpp  TurLeft_sts.hpp  TurnRig_sts.hpp  load_sts.hpp  sLPRR_sts.hpp  sRPR_sts.hpp  sTurLef_sts.hpp  sTurRig_sts.hpp
RGB_eHMI_Dummy_Services/include/idl/Alte IDLs/: RPL_sts_alt.hpp  TurnRig_sts_alt.hpp  allow_passing_status.hpp  allow_pedestrian_crossing_status.hpp  leaving_parking_rect_left_status.hpp  loading_status.hpp  rect_parking_right_status.hpp  set_currently_loading.hpp  set_rectangular_parking_left.hpp  set_rectangular_parking_right.hpp  set_turning_left_status.hpp
RGB_eHMI_Dummy_Services/src/: Dummy_Service.cpp
RGB_eHMI_Front_Heck/: CMakeLists.txt  README.md  orchestrator_front_heck.txt
RGB_eHMI_Front_Heck/eHMI_symbols/eHMI_streams/: AkkuLadenStream.stream  AusrufezeichenWarnungStream.stream  EngstelleStream.stream  ParkenLinksStream.stream  ParkenRechtsStream.stream  ZebrastreifenStream.stream
RGB_eHMI_Front_Heck/include/: Back_Service.hpp  Front_Service.hpp  RGB_Matrix_Controller.hpp  server_socket.hpp
RGB_eHMI_Front_Heck/include/idl/: APass_sts.hpp  LPRR_sts.hpp  RPL_sts.hpp  SafStop_sts.hpp  sCuLoad_sts.hpp  sLPRL_sts.hpp  sRPL_sts.hpp  sSafSto_sts.hpp
RGB_eHMI_Front_Heck/include/idl/Alte IDLs/: RPR_sts_alt.hpp  TurLeft_sts_alt.hpp  leaving_parking_rect_right_status.hpp  rect_parking_left_status.hpp  safe_stop_status.hpp  set_leaving_parking_rect_left_status.hpp  set_leaving_parking_rectangular_right.hpp  set_safe_stop_status.hpp  set_turning_right_status.hpp  turning_left_status.hpp  turning_right_status.hpp
RGB_eHMI_Front_Heck/lib/: librgbmatrix.so.1
RGB_eHMI_Front_Heck/src/: Back_Service.cpp  Front_Service.cpp
UML Diagramme autoTAXI/: README.md
(+4 files in other folders)
